force-app/main/default/objects/Asset_History__c/Asset_History__c.object-meta.xml
<CustomObject>
    <label>Asset History</label>
    <nameField>
        <label>Asset History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Historeis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>