force-app/main/default/objects/Asset_History__c/fields/Asset_Request__c.field-meta.xml
<CustomField>
    <fullName>Asset_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Request</label>
    <referenceTo>Asset_Request__c</referenceTo>
    <relationshipLabel>Asset Historeis</relationshipLabel>
    <relationshipName>Asset_Historeis</relationshipName>
    <type>Lookup</type>
</CustomField>