force-app/main/default/objects/Asset_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset History Changes</relationshipLabel>
    <relationshipName>Asset_History_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>