force-app/main/default/objects/Asset_History__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset Historeis (Employee)</relationshipLabel>
    <relationshipName>Asset_Historeis</relationshipName>
    <type>Lookup</type>
</CustomField>